# token-dealer

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  docker-compose.yml  token-dealer.toml.example
.ai/plans/: v0.2.0-hardening.md
.github/workflows/: build.yml
src/: agents.rs  error.rs  lib.rs  main.rs  ratelimit.rs  telemetry.rs
src/auth/: keystore.rs  mod.rs  users.rs
src/config/: mod.rs  service.rs  types.rs  validate.rs
src/cost/: limits.rs  mod.rs  openrouter_sync.rs
src/db/: mod.rs  queries.rs
src/discovery/: mod.rs
src/log/: mod.rs
src/metadata/: mod.rs
src/oauth/: mod.rs
src/providers/: adapter.rs  health.rs  manifest.rs  mod.rs  registry.rs
src/providers/adapters/: anthropic.rs  generic.rs  google.rs  kiro.rs  mod.rs  openai.rs  responses.rs
src/proxy/: fallback.rs  mod.rs  pipeline.rs  stream.rs
src/routing/: mod.rs  scorer.rs  selector.rs  specificity.rs
src/schema/: canonical.rs  inbound.rs  mod.rs  outbound.rs
src/server/: admin.rs  auth.rs  auth_endpoints.rs  events.rs  handlers.rs  middleware.rs  mod.rs  multimodal.rs  passthrough.rs  router.rs  ui.rs  ui_login.rs
src/tokens/: mod.rs
tests/: bin_login_smoke.rs  integration.rs  loopback_oauth.rs
