[package]
name = "token-dealer"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "High-performance LLM routing proxy in Rust. OpenAI-compatible, multi-provider, tier-based routing."
license = "MIT"
repository = "https://github.com/phantomic12/token-dealer"

[[bin]]
name = "token-dealer"
path = "src/main.rs"

[lib]
name = "token_dealer"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "signal", "time", "fs", "sync"] }
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"

# HTTP
axum = { version = "0.7", features = ["macros", "json", "tokio", "http1"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "request-id", "util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
http = "1.1"
http-body-util = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Errors
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# IDs
uuid = { version = "1.10", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
config = { version = "0.14", default-features = false, features = ["toml"] }

# Misc
bytes = "1.7"
pin-project-lite = "0.2"
once_cell = "1.20"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1.40", features = ["full"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
