[package]
name = "token-dealer"
version = "0.2.0-rc2"
edition = "2021"
rust-version = "1.75"
description = "High-performance LLM routing proxy in Rust. OpenAI-compatible, multi-provider, tier-based routing."
license = "MIT"
repository = "https://github.com/phantomic12/token-dealer"

[[bin]]
name = "token-dealer"
path = "src/main.rs"

[[bin]]
name = "token-dealer-login"
path = "src/bin/login.rs"

[lib]
name = "token_dealer"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "signal", "time", "fs", "sync"] }
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"

# HTTP
axum = { version = "0.7", features = ["macros", "json", "tokio", "http1"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "request-id", "util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
http = "1.1"
http-body-util = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Errors
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# IDs
uuid = { version = "1.10", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
config = { version = "0.14", default-features = false, features = ["toml"] }

# Misc
bytes = "1.7"
pin-project-lite = "0.2"
once_cell = "1.20"

# Base64 (auth middleware)
base64 = "0.22"

# AES-256-GCM for encrypted credential store
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"

# HKDF-SHA256 for subkey derivation (per-purpose scopes)
hkdf = "0.12"

# Argon2 for password hashing (multi-user auth)
argon2 = "0.5"
sha2 = "0.10"

# OTLP trace export
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "trace"] }
opentelemetry-semantic-conventions = "0.27"

# Real token counting for cost + scorer
tiktoken-rs = "0.7"

# Database (bundled SQLite — no system libsqlite3 needed)
rusqlite = { version = "0.32", features = ["bundled"] }

# OAuth loopback CLI (token-dealer-login)
ureq = { version = "2.10", features = ["json"] }
url = "2.5"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1.40", features = ["full"] }
ureq = { version = "2.10", features = ["json"] }
url = "2.5"
rand = "0.8"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
